adds restricted property

--- a/src/test/resources/travis.ini
+++ b/src/test/resources/travis.ini
@@ -8,3 +8,4 @@ wiki.base.siteurl=http://wiki.bitplan.com
 wiki.base.scriptpath=/
 wiki.frontend.category=frontend
 wiki.frontend.frame=MediaWiki:Frame.rythm
+wiki.restricted=false
