--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,12 @@
 			<artifactId>mediawiki-japi</artifactId>
 			<version>0.0.20</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.1</version>
+		</dependency>
 		<!-- HTML Cleaner for html parsing and xpath handling -->
 		<dependency>
 			<groupId>net.sourceforge.htmlcleaner</groupId>
