tries fixing travis tests

--- a/src/test/resources/travis.ini
+++ b/src/test/resources/travis.ini
@@ -2,8 +2,9 @@
 # Backend Wiki configuration
 # this is the configuration for travis continuous integration tests
 #
+frontend.url=http://frontend.bitplan.com
 wiki.base.id=wiki
-wiki.base.version=1.23.5
+wiki.base.version=1.27.3
 wiki.base.siteurl=http://wiki.bitplan.com
 wiki.base.scriptpath=/
 wiki.frontend.category=frontend
