--- a/pom.xml
+++ b/pom.xml
@@ -5,19 +5,21 @@
 	<parent>
 		<groupId>com.bitplan.pom</groupId>
 		<artifactId>com.bitplan.pom</artifactId>
-		<version>0.0.8</version>
+		<version>0.0.34</version>
 		<relativePath>../com.bitplan.pom/pom.xml</relativePath>
 	</parent>
 	<groupId>com.bitplan.wikifrontend</groupId>
 	<artifactId>com.bitplan.wikifrontend</artifactId>
-	<version>0.0.5</version>
-	<name>MediaWiki Java RestFUL Frontend</name>
-	<description>Versatile MediaWiki Frontend - page filter and access control as base feature</description>
+	<version>0.0.6</version>
+	<name>MediaWiki Java RestFUL CMS Frontend</name>
+	<description>Versatile MediaWiki Content Management System Frontend - page filter and access control as base feature</description>
 	<properties>
 		<!-- for parent pom to work -->
 		<github.project>com.bitplan.wikifrontend</github.project>
 		<!-- for README generation -->
 		<documentation.wiki>http://wikicms.bitplan.com/</documentation.wiki>
+		<!-- Rythm Template Engine -->
+		<rythm.version>1.3.0</rythm.version>
 	</properties>
 	<build>
 		<plugins>
@@ -70,7 +72,6 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>${junit4.version}</version>
 		</dependency>
 		<!-- simplerest -->
 		<dependency>
@@ -91,17 +92,17 @@
 			<artifactId>com.bitplan.simplerest-api</artifactId>
 			<version>0.0.8</version>
 		</dependency>
-		<!-- rythm template support -->
+		<!-- rythm engine -->
 		<dependency>
 			<groupId>org.rythmengine</groupId>
 			<artifactId>rythm-engine</artifactId>
-			<version>1.1.7</version>
+			<version>${rythm.version}</version>
 		</dependency>
 		<!-- mediawiki japi -->
 		<dependency>
 			<groupId>com.bitplan</groupId>
 			<artifactId>mediawiki-japi</artifactId>
-			<version>0.0.21</version>
+			<version>0.1.05</version>
 		</dependency>
 		<!-- HTML Cleaner for html parsing and xpath handling -->
 		<dependency>
