--- a/pom.xml
+++ b/pom.xml
@@ -68,10 +68,16 @@
 		</plugins>
 	</build>
 	<dependencies>
-		<!-- Junit test framework -->
+		<!-- JUnit testing -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all -->
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
 		</dependency>
 		<!-- simplerest -->
 		<dependency>
